--- a/index.html
+++ b/index.html
@@ -7,20 +7,40 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="content">
-    <div class="container">
-      <div class="footer-service">
-        <ul class="list-service">
-          <li><a href="#"><i></i><span>预约维修服务</span></a></li>
-          <li><a href="#"><i></i><span>7天无理由退货</span></a></li>
-          <li><a href="#"><i></i><span>15天免费换货</span></a></li>
-          <li><a href="#"><i></i><span>满99元包邮</span></a></li>
-          <li><a href="#"><i></i><span>520余家售后网点</span></a></li>
-        </ul>
-      </div>
-      <div class="footer-links clearfix"></div>
+  <div class="card">
+    <input type="radio" name="select" id="slide_1" checked>
+    <input type="radio" name="select" id="slide_2">
+    <input type="radio" name="select" id="slide_3">
+    <!-- 点击按钮 -->
+    <div class="slide">
+      <label for="slide_1" class="slide_btn_1"></label>
+      <label for="slide_2" class="slide_btn_2"></label>
+      <label for="slide_3" class="slide_btn_3"></label>
     </div>
-    
+    <div class="content con1">
+      <label for="" class="pic"><img src="img/20210108.160747.png" alt="" class="img_1"></label>
+      <div class="text">
+        <h2 class="title">section1</h2>
+        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias atque perferendis minus!</p>
+        <button class="btn">Read More</button>
+      </div>
+    </div>
+    <div class="content con2">
+      <label for="" class="pic"><img src="img/20210108.172733.png" alt="" class="img_2"></label>
+      <div class="text">
+        <h2 class="title">section2</h2>
+        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias atque perferendis minus!</p>
+        <button class="btn">Read More</button>
+      </div>
+    </div>
+    <div class="content con3">
+      <label for="" class="pic"><img src="img/20210108.172754.png" alt="" class="img_3"></label>
+      <div class="text">
+        <h2 class="title">section3</h2>
+        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias atque perferendis minus!</p>
+        <button class="btn">Read More</button>
+      </div>
+    </div>
   </div>
 </body>
 <script type="text/javascript" src="js/main.js" charset="utf-8"></script>
